# torbox-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DISCLAIMER.md  LICENSE  README.md  TODO.md  TRD.md  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml  release_template.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASE_SIGNING.md
scripts/: update_homebrew_formula.py
tests/: test_api_alignment.py  test_api_audit_fixes.py  test_api_parity.py  test_bug_fixes.py  test_checkcached_show.py  test_client.py  test_coverage_completeness.py  test_formatters.py  test_improvements.py  test_incomplete_items.py  test_missing.py  test_models.py  test_monitor.py  test_new_commands.py  test_new_features.py  test_packaging.py  test_regression.py  test_search.py  test_utils.py  test_version.py
tests/fixtures/: general_status.json  rss_list.json  torrents_list.json  usenet_list.json  user_me.json  webdl_list.json
torbox/: __init__.py  __main__.py  cli.py  client.py  config.py  exceptions.py  formatters.py  models.py  stremio.py  utils.py
torbox/commands/: __init__.py  _helpers.py  config_cmd.py  general.py  integrations.py  monitor.py  notifications.py  queued.py  rss.py  search.py  stream.py  torrents.py  usenet.py  user.py  webdl.py
