[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "torbox-cli"
dynamic = ["version"]
description = "CLI wrapper for the TorBox API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["torbox", "cli", "torrent", "usenet", "api", "debrid"]
dependencies = [
    "typer>=0.25.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "python-dotenv>=1.2.2",
    "guessit>=3.8",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/SwordfishTrumpet/torbox-cli"
Repository = "https://github.com/SwordfishTrumpet/torbox-cli"
Changelog = "https://github.com/SwordfishTrumpet/torbox-cli/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=7.1.0",
    "types-python-dateutil>=2.9.0",
    "build>=1.0.0",
]

[project.scripts]
torbox = "torbox.cli:cli_entry"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["torbox"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["torbox"]
omit = ["torbox/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 65

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=torbox --cov-report=term-missing --cov-fail-under=65"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
]
